// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serve fs output: _00 manifest.json 1`] = `
Object {
  "background": Object {
    "service_worker": "service-worker-loader.js",
    "type": "module",
  },
  "description": "test extension",
  "manifest_version": 3,
  "name": "test extension",
  "version": "1.0.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "https://github.com/*",
        "https://google.com/*",
      ],
      "resources": Array [
        "<dynamic_resource>",
      ],
      "use_dynamic_url": true,
    },
    Object {
      "matches": Array [
        "<all_urls>",
      ],
      "resources": Array [
        "*",
        "**/*",
      ],
      "use_dynamic_url": true,
    },
  ],
}
`;

exports[`serve fs output: _01 output files 1`] = `
Array [
  "_virtual/src/content1.ts.js",
  "_virtual/src/content2.ts.js",
  "_virtual/src/font.otf.js",
  "_virtual/src/image.png.js",
  "_virtual/src/script.ts.js",
  "_virtual/vendor/crx-client-port.js",
  "_virtual/vendor/crx-dynamic-src-script.ts.js",
  "_virtual/vendor/vite-client-env.js",
  "_virtual/vendor/vite-client.js",
  "assets/content-script-loader.content1.ts.hash.js",
  "assets/content-script-loader.content2.ts.hash.js",
  "assets/precontroller.hash.js",
  "manifest.json",
  "service-worker-loader.js",
  "src/font.otf",
  "src/image.png",
]
`;

exports[`serve fs output: _virtual/src/content1.ts.js 1`] = `
"import icon from './image.png.js';
import script from '../vendor/crx-dynamic-src-script.ts.js';

console.log(\\"content.ts\\", { icon, script });
if (import.meta.hot) {
  import.meta.hot.on(\\"crx:full-reload\\", () => {
    console.log(\\"[crx] full reload\\");
    setTimeout(() => location.reload(), 500);
  });
}
"
`;

exports[`serve fs output: _virtual/src/content2.ts.js 1`] = `
"import font from './font.otf.js';

console.log(\\"content2.ts\\", { font });
if (import.meta.hot) {
  import.meta.hot.on(\\"crx:full-reload\\", () => {
    console.log(\\"[crx] full reload\\");
    setTimeout(() => location.reload(), 500);
  });
}
"
`;

exports[`serve fs output: _virtual/src/font.otf.js 1`] = `
"var font = \\"/src/font.otf\\";

export { font as default };
"
`;

exports[`serve fs output: _virtual/src/image.png.js 1`] = `
"var icon = \\"/src/image.png\\";

export { icon as default };
"
`;

exports[`serve fs output: _virtual/src/script.ts.js 1`] = `
"console.log(\\"main world script\\");
if (import.meta.hot) {
  import.meta.hot.on(\\"crx:full-reload\\", () => {
    console.log(\\"[crx] full reload\\");
    setTimeout(() => location.reload(), 500);
  });
}
"
`;

exports[`serve fs output: assets/content-script-loader.content1.ts.hash.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    if (\\"\\")
      await import(
        /* @vite-ignore */
        chrome.runtime.getURL(\\"\\")
      );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"_virtual/vendor/vite-client.js\\")
    );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"_virtual/src/content1.ts.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`serve fs output: assets/content-script-loader.content2.ts.hash.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    if (\\"\\")
      await import(
        /* @vite-ignore */
        chrome.runtime.getURL(\\"\\")
      );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"_virtual/vendor/vite-client.js\\")
    );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"_virtual/src/content2.ts.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`serve fs output: assets/precontroller.hash.js 1`] = `
"setTimeout(() => location.reload(), 100);
"
`;

exports[`serve fs output: service-worker-loader.js 1`] = `
"import 'http://localhost:3000/@crx/client/worker';
import 'http://localhost:3000/src/background.ts';
"
`;
